[gd_scene load_steps=8 format=1]

[ext_resource path="res://addons/Ross's Project Timer/R_timer_widget.gd" type="Script" id=1]
[ext_resource path="res://addons/Ross's Project Timer/Timer Icon_44.png" type="Texture" id=2]
[ext_resource path="res://addons/Ross's Project Timer/Adjust Time Lines.png" type="Texture" id=3]

[sub_resource type="CanvasItemShader" id=1]

_code = { "fragment":"uniform float opacity = 1.0;\nCOLOR.a *= opacity;", "fragment_ofs":0, "light":"", "light_ofs":0, "vertex":"", "vertex_ofs":0 }

[sub_resource type="CanvasItemMaterial" id=2]

shader/shader = SubResource( 1 )
shader/shading_mode = 0
shader_param/opacity = 1.0

[sub_resource type="Animation" id=3]

length = 4.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Label:visibility/opacity")
tracks/0/interp = 2
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1.8, 2.3 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ 0.5, 0.1, 0.1 ] }
tracks/1/type = "value"
tracks/1/path = NodePath("Timer Icon:visibility/opacity")
tracks/1/interp = 2
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 1.8, 2.3 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ 0.5, 0.1, 0.1 ] }

[sub_resource type="Animation" id=4]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect/min_size")
tracks/0/interp = 2
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( -2.54912, 1 ), "update":0, "values":[ Vector2( 94, 28 ), Vector2( 28, 28 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect/size")
tracks/1/interp = 2
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( -2.54912, 1 ), "update":0, "values":[ Vector2( 94, 28 ), Vector2( 28, 28 ) ] }
tracks/2/type = "value"
tracks/2/path = NodePath("Pause Icon:material/material:shader_param/opacity")
tracks/2/interp = 2
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( -2.54912, 1 ), "update":0, "values":[ 1.0, 0.0 ] }

[node name="Control" type="Button"]

rect/min_size = Vector2( 94, 28 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 94.0
margin/bottom = 28.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
script/script = ExtResource( 1 )

[node name="Pause Icon" type="Control" parent="."]

visibility/visible = false
material/material = SubResource( 2 )
anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 6.0
margin/top = 7.0
margin/right = 6.0
margin/bottom = 7.0

[node name="Polygon2D" type="Polygon2D" parent="Pause Icon"]

material/use_parent = true
transform/scale = Vector2( 0.52, 0.52 )
polygon = Vector2Array( -6.85583, -7.56596, -6.51194, -7.9797, -2.5173, -7.97307, -2.15884, -7.57486, -2.1521, 7.58931, -2.54666, 7.98387, -6.44676, 7.98387, -6.8565, 7.52861 )
uv = Vector2Array(  )
color = Color( 1, 1, 1, 0.282353 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Polygon2D1" type="Polygon2D" parent="Pause Icon"]

material/use_parent = true
transform/scale = Vector2( -0.52, 0.52 )
polygon = Vector2Array( -6.85583, -7.56596, -6.51194, -7.9797, -2.5173, -7.97307, -2.15884, -7.57486, -2.1521, 7.58931, -2.54666, 7.98387, -6.44676, 7.98387, -6.8565, 7.52861 )
uv = Vector2Array(  )
color = Color( 1, 1, 1, 0.282353 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Timer Icon" type="TextureFrame" parent="."]

visibility/visible = false
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
rect/scale = Vector2( 0.45, 0.45 )
focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 10.0
margin/right = -32.0
margin/bottom = -32.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="Label" type="Label" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 40.0
margin/top = 5.0
margin/right = -40.0
margin/bottom = -9.0
text = "0:09:59"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/paused = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Collapse Anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/collapse = SubResource( 4 )
playback/active = true
playback/speed = 2.0
blend_times = [  ]
autoplay = ""

[node name="Menu" type="PopupMenu" parent="."]

editor/display_folded = true
visibility/visible = false
anchor/top = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1.0
margin/top = -4.0
margin/right = 225.0
margin/bottom = -267.0
popup/exclusive = false
items = [  ]

[node name="GridBox" type="GridContainer" parent="Menu"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 8.0
margin/right = 8.0
margin/bottom = 8.0
custom_constants/vseparation = 0
columns = 1

[node name="Pause-Resume Button" type="ToolButton" parent="Menu/GridBox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 208.0
margin/bottom = 22.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Pause"
flat = false
align = 0

[node name="Add Time Button" type="ToolButton" parent="Menu/GridBox"]

rect/min_size = Vector2( 0, 50 )
hint/tooltip = "Set to negative value to subtract time. "
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 22.0
margin/right = 208.0
margin/bottom = 75.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Adjust Time"
flat = true
align = 0

[node name="Connection Lines" type="TextureFrame" parent="Menu/GridBox/Add Time Button"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -7.0
margin/top = 15.5
margin/right = -47.0
margin/bottom = -24.5
texture = ExtResource( 3 )
modulate = Color( 1, 1, 1, 0.12549 )
stretch_mode = 0

[node name="Time SpinBox" type="SpinBox" parent="Menu/GridBox/Add Time Button"]

anchor/left = 1
anchor/top = 3
anchor/right = 1
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 77.0
margin/top = 12.5
margin/right = 1.0
margin/bottom = -11.5
range/min = 1.0
range/max = 999999.0
range/step = 1.0
range/page = 0.0
range/value = 60.0
range/exp_edit = true
range/rounded = false
editable = true
prefix = ""
suffix = "min"

[node name="Add Button" type="Button" parent="Menu/GridBox/Add Time Button"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 22.0
margin/top = 20.5
margin/right = -15.0
margin/bottom = 0.5
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Add"
flat = false

[node name="Subtract Button" type="Button" parent="Menu/GridBox/Add Time Button"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 22.0
margin/top = -1.5
margin/right = -15.0
margin/bottom = -21.5
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Sub"
flat = false

[node name="Reset Button" type="ToolButton" parent="Menu/GridBox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 75.0
margin/right = 208.0
margin/bottom = 97.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Reset Time"
flat = false
align = 0

[node name="HSeparator1" type="HSeparator" parent="Menu/GridBox"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 97.0
margin/right = 208.0
margin/bottom = 103.0

[node name="Switch-Pause Toggle" type="CheckBox" parent="Menu/GridBox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 103.0
margin/right = 208.0
margin/bottom = 126.0
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
text = "Pause on window switch"
flat = false
align = 0

[node name="Use-Anim Toggle" type="CheckBox" parent="Menu/GridBox"]

hint/tooltip = "Disabling this may save a percent or two of\nyour CPU usage while the timer is paused. "
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 126.0
margin/right = 208.0
margin/bottom = 149.0
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
text = "Use pause animation"
flat = false
align = 0

[node name="Show Seconds Toggle" type="CheckBox" parent="Menu/GridBox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 149.0
margin/right = 208.0
margin/bottom = 172.0
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
text = "Show seconds"
flat = false
align = 0

[node name="Only-Mouseover Toggle" type="CheckBox" parent="Menu/GridBox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 172.0
margin/right = 208.0
margin/bottom = 195.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Only show on mouseover"
flat = false
align = 0

[node name="GridContainer" type="GridContainer" parent="Menu/GridBox"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 195.0
margin/right = 208.0
margin/bottom = 218.0
columns = 2

[node name="Indent" type="Control" parent="Menu/GridBox/GridContainer"]

rect/min_size = Vector2( 24, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 24.0
margin/bottom = 23.0

[node name="Collapsible Toggle" type="CheckBox" parent="Menu/GridBox/GridContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 28.0
margin/top = 0.0
margin/right = 204.0
margin/bottom = 23.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Collapse on mouse exit"
flat = false
align = 0

[node name="HSeparator" type="HSeparator" parent="Menu/GridBox"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 218.0
margin/right = 208.0
margin/bottom = 224.0

[node name="Close Button" type="ToolButton" parent="Menu/GridBox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 224.0
margin/right = 208.0
margin/bottom = 246.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Close Menu"
flat = false
align = 0

[node name="Version Label" type="Label" parent="Menu"]

visibility/opacity = 0.15
anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 64.0
margin/top = 18.0
margin/right = 6.0
margin/bottom = 4.0
text = "1.1.0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ResetConfirm" type="ConfirmationDialog" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -338.0
margin/top = 52.0
margin/right = -7.0
margin/bottom = 110.0
popup/exclusive = false
window/title = "Please Confirm..."
dialog/text = "Are you sure you want to reset the timer to zero\?"
dialog/hide_on_ok = true

[connection signal="mouse_enter" from="." to="." method="mouse_enter"]

[connection signal="mouse_exit" from="." to="." method="mouse_exit"]

[connection signal="pressed" from="Menu/GridBox/Pause-Resume Button" to="." method="PauseResume_Button_pressed"]

[connection signal="pressed" from="Menu/GridBox/Add Time Button/Add Button" to="." method="Add_Button_pressed"]

[connection signal="pressed" from="Menu/GridBox/Add Time Button/Subtract Button" to="." method="Subtract_Button_pressed"]

[connection signal="pressed" from="Menu/GridBox/Reset Button" to="." method="Reset_Button_pressed"]

[connection signal="pressed" from="Menu/GridBox/Switch-Pause Toggle" to="." method="SwitchPause_Toggle_pressed"]

[connection signal="pressed" from="Menu/GridBox/Use-Anim Toggle" to="." method="UseAnim_Toggle_pressed"]

[connection signal="pressed" from="Menu/GridBox/Show Seconds Toggle" to="." method="Show_Seconds_Toggle_pressed"]

[connection signal="pressed" from="Menu/GridBox/Only-Mouseover Toggle" to="." method="OnlyMouseover_Toggle_pressed"]

[connection signal="pressed" from="Menu/GridBox/GridContainer/Collapsible Toggle" to="." method="Collapsible_Toggle_pressed"]

[connection signal="pressed" from="Menu/GridBox/Close Button" to="." method="Close_Button_pressed"]

[connection signal="confirmed" from="ResetConfirm" to="." method="ResetConfirm_confirmed"]


